# matlab-bridge

./: CMakeLists.txt  MatlabBridge.py  README.md  config.service.matlab_bridge  detection_sample.m  kalman_tracker.m  protobuf_defs.pb.cc  protobuf_defs.pb.h  protobuf_defs.proto  protobuf_defs_pb2.py  track_kalman.py  training_sample.m
protobuf_defs/: pb_descriptor_BBox.m  pb_descriptor_DirectoryPath.m  pb_descriptor_FilePath.m  pb_descriptor_FrameLocation.m  pb_descriptor_FrameLocationList.m  pb_descriptor_FramePathPair.m  pb_descriptor_ImageSubstrate.m  pb_descriptor_Label.m  pb_descriptor_LabelProperties.m  pb_descriptor_Labelable.m  pb_descriptor_LabelableList.m  pb_descriptor_LabeledLocation.m  pb_descriptor_LabeledTrack.m  pb_descriptor_MatlabBridgeMsg.m  pb_descriptor_Model.m  pb_descriptor_Point2D.m  pb_descriptor_PreciseLocation.m  pb_descriptor_Properties.m  pb_descriptor_Purpose.m  pb_descriptor_PurposedLabelableSeq.m  pb_descriptor_PurposedListSequence.m  pb_descriptor_Result.m  pb_descriptor_ResultList.m  pb_descriptor_ResultSet.m  pb_descriptor_RunSet.m  pb_descriptor_Semantics.m  pb_descriptor_Silhouette.m  pb_descriptor_Substrate.m  pb_descriptor_VideoSeekTime.m  pb_descriptor_VideoSubstrate.m  pb_read_BBox.m  pb_read_DirectoryPath.m  pb_read_FilePath.m  pb_read_FrameLocation.m  pb_read_FrameLocationList.m  pb_read_FramePathPair.m  pb_read_ImageSubstrate.m  pb_read_Label.m  pb_read_LabelProperties.m  pb_read_Labelable.m  (+21 more)
protobuflib/: pblib_generic_parse_from_string.m  pblib_generic_serialize_to_string.m
